create slider on desktop

--- a/partials/nav.html
+++ b/partials/nav.html
@@ -1,5 +1,5 @@
 <nav class="bg-white">
-    <div class="max-w-medium flex flex-wrap items-center justify-between mx-auto py-6 sticky top-0 z-50">
+    <div class="max-w-medium flex flex-wrap items-center justify-between mx-auto py-4 md:py-6 sticky top-0 z-50 px-6 xl:px-0">
 
         <div><a href="#"><img src="/dist/img/logo.svg" alt="logo firmy giarddesign"></a></div>
 
