--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,3 +9,19 @@
 html{
     font-family: 'Inter', sans-serif;
 }
+
+
+@keyframes slideIn {
+    from {
+        opacity: 0;
+        transform: translateX(100%);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+.animate-slide {
+    animation: slideIn 0.5s ease-in-out;
+}
