finish basic pattern of footer

--- a/partials/nav.html
+++ b/partials/nav.html
@@ -1,7 +1,7 @@
-<nav class="bg-white">
-    <div class="max-w-medium flex flex-wrap items-center justify-between mx-auto py-4 md:py-6 sticky top-0 z-50 px-6 xl:px-0">
+<nav class="bg-white fixed top-0 left-0 right-0 z-50">
+    <div class="max-w-medium flex flex-wrap items-center justify-between mx-auto py-4 md:py-6  px-6 xl:px-0">
 
-        <div><a href="#"><img src="/dist/img/logo.svg" alt="logo firmy giarddesign"></a></div>
+        <div><a href="#"><img src="dist/img/logo.svg" alt="logo firmy giarddesign"></a></div>
 
         <button class="hamburger hamburger--collapse md:hidden p-2" type="button" id="hamburgerBtn">
             <span class="hamburger-box">
