--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,8 +9,12 @@
 html{
     font-family: 'Inter', sans-serif;
     overflow-x: hidden;
+    scroll-behavior: smooth;
 }
 
+h1,h2,h3,h4,h5,h6{
+    font-family: 'Montserrat', sans-serif;
+}
 
 @keyframes slideIn {
     from {
