--- a/partials/nav.html
+++ b/partials/nav.html
@@ -3,17 +3,19 @@
 
         <div><a href="#"><img src="dist/img/logo.svg" alt="logo firmy giarddesign"></a></div>
 
-        <button class="hamburger hamburger--collapse md:hidden p-2" type="button" id="hamburgerBtn">
+        <button class="hamburger hamburger--collapse lg:hidden p-2" type="button" id="hamburgerBtn">
             <span class="hamburger-box">
                 <span class="hamburger-inner"></span>
             </span>
         </button>
 
-        <div class="hidden w-full md:block md:w-auto" id="navbarDropdown">
+        <div class="hidden w-full lg:block md:w-auto" id="navbarDropdown">
             <ul class="
                 flex 
                 flex-col  md:flex-row 
                 font-medium
+                justify-center
+                items-center
                  p-4 md:p-0 
                  mt-4  md:mt-0 
                  border  md:border-0
@@ -70,6 +72,19 @@
                 <li>
                     <a href="#"
                         class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-grey md:hover:bg-transparent md:border-0 md:hover:text-gree md:p-0 ">Kontakt</a>
+                </li>
+                <li>
+                    
+
+                    <form action="" class="searchForm relative w-10 h-12  p-1 transition-all duration-300 ease-in-out hover:w-56 hover:shadow-md">
+                        <input id="searchInput" type="search" required class="searchInput  w-0 h-10 px-4 py-2 rounded-full transition-all duration-300 ease-in-out transform outline-none  absolute top-1 left-0">
+                        <button><img src="../../dist/img/search.svg" alt="" class="absolute  right-2 transform -translate-y-1/2 w-6 h-6 opacity-70 hover:opacity-100 transition-opacity duration-300 ease-in-out" style="top:25px"></button>
+                    </form>
+                    
+
+                            
+                        
+                    </div>
                 </li>
             </ul>
         </div>
