--- a/partials/nav.html
+++ b/partials/nav.html
@@ -37,15 +37,15 @@
                     <!-- Dropdown menu -->
                     <div id="dropdownNavbar" class="
                         md:absolute
-                        z-10 
+                        z-50 
                         hidden 
                         font-normal 
-                       
+                       bg-white
                         divide-y 
                         divide-gray-100 
                         rounded-lg 
                         shadow 
-                        w-4/5 md:w-44
+                        w-full md:w-44
                         mb-2 md:mb-0">
                         <ul class="py-2 text-sm">
                             <li>
