--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -30,10 +30,24 @@ h6 {
 		transform: translateX(0);
 	}
 }
-
 .animate-slide {
-	animation: slideIn 0.5s ease-in-out;
+	animation: slideIn 1s ease-in-out;
 }
+@keyframes slideOut {
+	from {
+		opacity: 0;
+		transform: translateX(-100%);
+	}
+	to {
+		opacity: 1;
+		transform: translateX(0);
+	}
+}
+.animate-prevSlide{
+	animation: slideOut 1s ease-in-out;
+}
+
+
 
 .searchForm:hover .searchInput, .searchForm:valid .searchInput{
 	width: 200px;
@@ -41,4 +55,8 @@ h6 {
 
 .searchForm:valid {
 	width: 224px;
+}
+.highlighted {
+	background-color: yellow;
+	font-weight: bold;
 }
