--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,4 +1,6 @@
 @use 'hamburger/hamburger.css';
+@use 'scrollbar/scrollbar.scss';
+
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&display=swap');
 
 @tailwind base;
