finish navigation with basic searching logic

--- a/src/sass/scrollbar/scrollbar.scss
+++ b/src/sass/scrollbar/scrollbar.scss
@@ -1,11 +1,11 @@
 ::-webkit-scrollbar {
-	width: 15px; /* szerokość paska przewijania */
+	width: 15px; 
   }
   
   ::-webkit-scrollbar-track {
-	background: #F5F0EC; /* kolor tła paska przewijania */
+	background: #F5F0EC; 
   }
   
   ::-webkit-scrollbar-thumb {
-	background: #DCC1AB; /* kolor samego paska przewijania */
+	background: #1B5B31; 
   }
