--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,6 +11,7 @@ html {
 	font-family: 'Inter', sans-serif;
 	overflow-x: hidden;
 	scroll-behavior: smooth;
+	scroll-margin-top: 4em;
 }
 
 h1,
@@ -75,4 +76,9 @@ h6 {
   
   .animate-fadeOut {
 	animation: fadeOut 4s ease-in-out forwards;
+  }
+
+  .highlight{
+	background-color: pink;
+	
   }
