--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,5 +1,6 @@
 @use 'hamburger/hamburger.css';
 @use 'scrollbar/scrollbar.scss';
+@use 'animations.scss';
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,400;1,500&display=swap');
 
@@ -23,36 +24,10 @@ h6 {
 	font-family: 'Montserrat', sans-serif;
 }
 
-@keyframes slideIn {
-	from {
-		opacity: 0;
-		transform: translateX(100%);
-	}
-	to {
-		opacity: 1;
-		transform: translateX(0);
-	}
-}
-.animate-slide {
-	animation: slideIn 1s ease-in-out;
-}
-@keyframes slideOut {
-	from {
-		opacity: 0;
-		transform: translateX(-100%);
-	}
-	to {
-		opacity: 1;
-		transform: translateX(0);
-	}
-}
-.animate-prevSlide{
-	animation: slideOut 1s ease-in-out;
-}
 
 
-
-.searchForm:hover .searchInput, .searchForm:valid .searchInput{
+.searchForm:hover .searchInput,
+.searchForm:valid .searchInput {
 	width: 200px;
 }
 
@@ -61,24 +36,7 @@ h6 {
 }
 
 
-@keyframes fadeOut {
-	0% {
-		opacity: 1;
-	  }
-	  50% {
-		opacity: 0.5;
-	  }
-	  100% {
-		opacity: 0;
-		visibility: hidden;
-	  }
-	}
-  
-  .animate-fadeOut {
-	animation: fadeOut 4s ease-in-out forwards;
-  }
 
-  .highlight{
+.highlight {
 	background-color: pink;
-	
-  }
+}
