--- a/src/sass/animations.scss
+++ b/src/sass/animations.scss
@@ -87,3 +87,73 @@
   .animate-rollInRight{
     animation: roll-in-right 1s ease-in-out
   }
+
+  @keyframes focus-in-expand-fwd {
+	0% {
+	  letter-spacing: -0.5em;
+	  transform: translateZ(-800px);
+	  filter: blur(12px);
+	  opacity: 0;
+	}
+	100% {
+	  transform: translateZ(0);
+	  filter: blur(0);
+	  opacity: 1;
+	}
+  }
+  
+
+  .animate-focusTextFwd{
+    animation: focus-in-expand-fwd 3s ease-in-out
+  }
+
+  @keyframes tilt-in-top-1 {
+	0% {
+	  transform: rotateY(30deg) translateY(-300px) skewY(-30deg);
+	  opacity: 0;
+	}
+	100% {
+	  transform: rotateY(0deg) translateY(0) skewY(0deg);
+	  opacity: 1;
+	}
+  }
+
+  .animate-titlInTop{
+    animation: tilt-in-top-1 2s ease-in-out
+  }
+
+  @keyframes tracking-in-contract-bck {
+	0% {
+	  letter-spacing: 1em;
+	  transform: translateZ(400px);
+	  opacity: 0;
+	}
+	40% {
+	  opacity: 0.6;
+	}
+	100% {
+	  transform: translateZ(0);
+	  opacity: 1;
+	}
+  }
+
+  .animate-trackingInContract{
+    animation: tracking-in-contract-bck 2s ease-in-out
+  }
+
+  @keyframes swing-in-top-fwd {
+	0% {
+	  transform: rotateX(-100deg);
+	  transform-origin: top;
+	  opacity: 0;
+	}
+	100% {
+	  transform: rotateX(0deg);
+	  transform-origin: top;
+	  opacity: 1;
+	}
+  }
+
+  .animate-swingIn{
+    animation: swing-in-top-fwd 3s ease-in-out
+  }
