--- a/partials/nav.html
+++ b/partials/nav.html
@@ -1,7 +1,7 @@
 <nav class="bg-white fixed top-0 left-0 right-0 z-50">
     <div class="max-w-medium flex flex-wrap items-center justify-between mx-auto py-4 md:py-6  px-6 xl:px-0">
 
-        <div><a href="#" class="nav-item"><img src="dist/img/assets/logo-giarddesign.svg" alt="logo firmy giarddesign"></a></div>
+        <div><a href="/" class="nav-item"><img src="dist/img/assets/logo-giarddesign.svg" alt="logo firmy giarddesign"></a></div>
 
         <button class="hamburger hamburger--collapse lg:hidden p-2" type="button" id="hamburgerBtn">
             <span class="hamburger-box">
@@ -22,20 +22,20 @@
                         class=" md:absolute z-50 hidden font-normal bg-white divide-y  divide-gray-100  rounded-lg shadow w-full md:w-44 mb-2 md:mb-0">
                         <ul class="py-2 text-sm">
                             <li class="nav-item">
-                                <a href="#projekty" class="block px-4 py-2  hover:bg-grey">Projekty</a>
+                                <a href="/oferta.html" class="block px-4 py-2  hover:bg-grey">Projekty</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#wizualizacje" class="block px-4 py-2  hover:bg-grey">Wizualizacje</a>
+                                <a href="/oferta.html" class="block px-4 py-2  hover:bg-grey">Wizualizacje</a>
                             </li >
                             <li class="nav-item">
-                                <a href="#realizacje" class="block px-4 py-2 hover:bg-grey ">Realizacje</a>
+                                <a href="/oferta.html" class="block px-4 py-2 hover:bg-grey ">Realizacje</a>
                             </li >
                         </ul>
 
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a href="#o-firmie"
+                    <a href="/#o-firmie"
                         class="block py-2 pl-3 pr-4 hover:bg-grey  md:border-0 md:hover:bg-transparent md:hover:text-green md:p-0 ">O
                         firmie</a>
                 </li>
@@ -44,7 +44,7 @@
                         class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-grey md:border-0 md:hover:bg-transparent md:hover:text-green md:p-0 ">Realizacje</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#kontakt"
+                    <a href="/#kontakt"
                         class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-grey md:hover:bg-transparent md:border-0 md:hover:text-gree md:p-0 ">Kontakt</a>
                 </li>
                 <li>
@@ -53,7 +53,7 @@
                     <form
                         class="searchForm relative w-10 h-12  p-1 transition-all duration-300 ease-in-out hover:w-56 hover:shadow-md">
                         <input id="searchInput" type="search" required
-                            class="searchInput  w-0 h-10 px-4 py-2 rounded-full transition-all duration-300 ease-in-out transform outline-none  absolute top-1 left-0">
+                            class="searchInput  w-0 h-10 px-4 py-2 rounded-full transition-all duration-300 ease-in-out transform  absolute top-1 left-0 focus:ring-transparent  border-none">
                         <button id="searchButton"><img src="dist/img/icons/search.svg" alt=""
                                 class="absolute  right-2 transform -translate-y-1/2 w-6 h-6 opacity-70 hover:opacity-100 transition-opacity duration-300 ease-in-out"
                                 style="top:25px"></button>
